--- a/CSS/style.css
+++ b/CSS/style.css
@@ -223,6 +223,7 @@ a:active {
 }
 
 .search__button {
+  /* position: relative; */
   width: 32px;
   height: 32px;
   display: flex;
@@ -233,6 +234,10 @@ a:active {
   box-shadow: none;
   background: #ffffff;
   background-color: rgba(255, 255, 255, 0.2);
+}
+
+.search-button-container {
+  position: relative;
 }
 
 .login__button {
@@ -547,7 +552,7 @@ a:active {
 }
 
 .tastes-item:hover {
-/* .tastes-item { */
+  /* .tastes-item { */
   width: 293px;
   height: 408px;
 
@@ -600,7 +605,6 @@ a:active {
   position: relative;
   bottom: 5px;
   width: 267px;
-
 
   font-style: normal;
   font-weight: 500;
@@ -1025,8 +1029,6 @@ a:active {
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
-  /* color: #999999; */
-  /* border: 1px solid #d3d3d2; */
 }
 
 .sign-in-container {
@@ -1145,27 +1147,28 @@ a:active {
 
 /* Окно поиска */
 .modal-search {
-  top: 59px;
-  right: 24%;
-  margin-right: 9px;
+  position: absolute;
+
+  width: 341px;
+  height: 84px;
+
+  top: 36px;
+  right: 1px;
   border-radius: 5px;
   display: none;
 }
 
 .input-search {
   margin: 20px 15px;
-  box-sizing: border-box;
-  padding: 9px 13px;
+  padding: 9px 13px 10px;
+
   width: 311px;
+  height: 44px;
   border-radius: 5px;
 
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
-
-  /* color: #999999; */
-  /* background: #ffffff; */
-  /* border: 1px solid #d3d3d2; */
 }
 
 /* Форма обратной связи */
