--- a/CSS/style.css
+++ b/CSS/style.css
@@ -222,8 +222,11 @@ a:active {
   gap: 10px;
 }
 
+.search-button-container {
+  position: relative;
+}
+
 .search__button {
-  /* position: relative; */
   width: 32px;
   height: 32px;
   display: flex;
@@ -236,7 +239,7 @@ a:active {
   background-color: rgba(255, 255, 255, 0.2);
 }
 
-.search-button-container {
+.login-button-container {
   position: relative;
 }
 
@@ -684,10 +687,16 @@ a:active {
 .news-mailing-container {
   margin: 40px 27px 40px;
   display: flex;
+
+  /* width: 560px; */
+  height: 220px;
 }
 
 /* Новости */
 .news {
+  width: 560px;
+  /* height: 220px; */
+
   padding: 23px 260px 40px 19px;
 
   text-align: left;
@@ -732,7 +741,7 @@ a:active {
 
 /* Рассылка */
 .mailing {
-  /* width: 560px; */
+  width: 560px;
   /* height: 220px; */
   margin-left: 26px;
   padding: 34px 26px 40px;
@@ -762,23 +771,21 @@ a:active {
   align-items: center;
 }
 
-.email-form-container input {
-  width: 335px;
+.email-input {
+  /* width: 335px; */
+  width: 366px;
+  /* height: 42px; */
+  /* padding: 9px 18px 9px 13px; */
   padding: 9px 18px 9px 13px;
-  margin-top: 5px;
+  /* margin-top: 5px; */
 
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  /* color: #999999; */
-
-  /* background: #ffffff; */
-  /* border: 1px solid rgba(178, 178, 178, 0.52); */
-  /* border-radius: 5px; */
 }
 
-.email-form-container button {
+.send-button {
   margin-top: 3px;
   margin-left: 12px;
   padding: 9px 18px 11px;
@@ -992,85 +999,10 @@ a:active {
 .modal {
   position: fixed;
 
+  border-radius: 5px;
   background: #f8f7f4;
   box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
   color: #323232;
-}
-
-/* Всплывающее окно входа */
-.modal-login {
-  top: 59px;
-  right: 17%;
-  margin-right: 5px;
-
-  border-radius: 5px;
-  display: none;
-}
-
-.login-form {
-  margin: 20px 18px 22px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-
-  align-items: left;
-}
-
-.login,
-.password {
-  background: #ffffff;
-}
-
-.login input,
-.password input {
-  box-sizing: border-box;
-  padding: 9px 14px;
-  width: 241px;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-}
-
-.sign-in-container {
-  display: flex;
-  margin-left: 1px;
-  gap: 16px;
-
-  text-underline-offset: 2px;
-}
-
-.button-sign-in {
-  padding: 11px 25px 9px 24px;
-
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 24px;
-  align-items: center;
-  color: #fefefe;
-  border-radius: 20px;
-
-  background: linear-gradient(0deg, #e74a35 0%, #f26843 100%), #e84d37;
-  box-shadow: 0px 1px 2px #ac1000;
-}
-
-.registration-container {
-  margin-top: 1px;
-  margin-left: 4px;
-}
-
-.restore,
-.registration {
-  font-weight: 400;
-  font-size: 13px;
-  line-height: 16px;
-  align-items: center;
-  color: #323232;
-  text-decoration: underline;
-}
-
-.registration {
-  position: relative;
-  top: 3px;
 }
 
 /* Меню каталога */
@@ -1148,27 +1080,112 @@ a:active {
 /* Окно поиска */
 .modal-search {
   position: absolute;
-
   width: 341px;
   height: 84px;
 
   top: 36px;
   right: 1px;
-  border-radius: 5px;
   display: none;
 }
 
 .input-search {
   margin: 20px 15px;
   padding: 9px 13px 10px;
-
   width: 311px;
   height: 44px;
-  border-radius: 5px;
 
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
+}
+
+/* Всплывающее окно входа */
+.modal-login {
+  position: absolute;
+  width: 277px;
+  height: 214px;
+
+  top: 36px;
+  right: -1px;
+  display: none;
+}
+
+.login-form {
+  margin: 20px 19px 22px 19px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  align-items: left;
+}
+
+.login,
+.password {
+  background: #ffffff;
+}
+
+.login-input,
+.password-input {
+  box-sizing: border-box;
+  /* padding: 9px 14px 13px 14px; */
+  padding: 0 13px 0 13px;
+  width: 241px;
+  height: 44px;
+
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+}
+
+.sign-in-container {
+  display: flex;
+  /* margin-left: 1px; */
+  gap: 16px;
+
+  text-underline-offset: 2px;
+}
+
+.button-sign-in {
+  padding: 11px 25px 9px 24px;
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  align-items: center;
+  color: #fefefe;
+  border-radius: 20px;
+
+  background: linear-gradient(0deg, #e74a35 0%, #f26843 100%), #e84d37;
+  box-shadow: 0px 1px 2px #ac1000;
+}
+
+.registration-container {
+  margin-top: 1px;
+  margin-left: 4px;
+}
+
+.restore,
+.registration {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 16px;
+  align-items: center;
+  color: #323232;
+  text-decoration: underline;
+}
+
+.registration {
+  position: relative;
+  top: 3px;
+}
+
+.restore:hover,
+.registration:hover,
+.restore:focus,
+.registration:focus,
+.restore:active,
+.registration:active {
+  color: #e84d37;
 }
 
 /* Форма обратной связи */
