Fonts added, fixed the location of the elements

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,6 +14,22 @@
     url("/fonts/web/roboto.woff") format("woff");
 }
 
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: bold;
+  src: local("Roboto"), url("/fonts/web/robotobold.woff2") format("woff2"),
+    url("/fonts/web/robotobold.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: medium;
+  src: local("Roboto"), url("/fonts/web/robotomedium.woff2") format("woff2"),
+    url("/fonts/web/robotomedium.woff") format("woff");
+}
+
 body {
   min-width: 960px;
   max-width: 1200px;
@@ -60,7 +76,7 @@ body {
   background-repeat: no-repeat;
 }
 
-/* Почему пляшут элементы при наведении на input??? зафиксировать размер */
+/* Пляшут элементы при наведении на input, зафиксировать размер */
 input {
   background: #ffffff;
   border: 1px solid rgba(178, 178, 178, 0.52);
@@ -150,7 +166,7 @@ a:active {
   display: flex;
   flex-direction: column;
 
-  margin: 0 27px 215px 27px;
+  margin: 0 27px 214px 27px;
   color: #ffffff;
 }
 
@@ -175,50 +191,37 @@ a:active {
 .site-navigation {
   display: flex;
   flex-wrap: wrap;
+  margin-top: -1px;
 
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 18px;
-  text-decoration: underline;
   align-items: center;
-  text-decoration-color: rgba(255, 255, 255, 0.2);
 }
 
-.site-navigation button {
-  /* padding: 9px 14px; */
+.site-navigation-button {
+  all: unset;
   padding: 7px 14px;
   margin: 0;
   font-weight: 700;
   font-size: 16px;
   line-height: 18px;
 
-  font-style: normal;
   align-items: center;
   background: none;
   box-shadow: none;
   text-align: center;
-  text-decoration: underline;
+  text-decoration: underline 1px;
+  text-decoration-skip-ink: none;
+  text-underline-offset: 3px;
   text-decoration-color: rgba(255, 255, 255, 0.2);
-}
-
-.site-navigation a {
-  /* padding: 8px 14px 9px 14px; */
-  padding: 7px 14px 8px;
-  margin: 0;
-
   border-radius: 40px;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 18px;
-  align-items: center;
 }
 
 .user-navigation {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   gap: 10px;
 }
 
@@ -312,7 +315,7 @@ a:active {
 }
 
 .working-time {
-  margin-right: 1px;
+  /* margin-right: 1px; */
   margin-top: -4px;
 
   display: flex;
@@ -324,7 +327,8 @@ a:active {
 
 .working-time li:nth-child(2) {
   margin-top: 4px;
-  margin-right: 1px;
+  margin-right: -2px;
+  /* margin-right: 1px; */
   font-size: 22px;
   line-height: 24px;
 }
@@ -344,13 +348,12 @@ a:active {
 }
 
 .offer-text {
-  margin-right: 3px;
-  margin-bottom: 30px;
+  margin-right: 2px;
+  margin-bottom: 32px;
 
   font-weight: 700;
   font-size: 60px;
   line-height: 60px;
-  display: flex;
   align-items: center;
   text-align: center;
   color: #ffffff;
@@ -404,7 +407,7 @@ a:active {
   opacity: 1;
 }
 
-.special-offer button {
+/* .special-offer button {
   padding: 9px 40px 11px;
 
   font-size: 32px;
@@ -412,6 +415,11 @@ a:active {
   align-items: center;
   text-align: center;
   color: #ffffff;
+} */
+
+.give-me-both-button {
+  height: 64px;
+  padding: 7px 40px 11px;
 }
 
 /* Баннеры */
