--- a/CSS/style.css
+++ b/CSS/style.css
@@ -424,17 +424,17 @@ a:active {
 
 /* Баннеры */
 .banners {
-  margin: 39px 14px 0;
+  margin: 41px 14px 0;
 
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   align-items: center;
 }
 
 .banner {
   width: 560px;
-  margin: 0 13px;
-  padding: 16px 21px 24px 19px;
+  margin: 0 13px 0;
+  padding: 14px 21px 23px 19px;
 
   display: flex;
   flex-direction: column;
@@ -442,12 +442,10 @@ a:active {
   font-size: 18px;
   line-height: 22px;
   text-align: left;
-  border-radius: 16px;
 }
 
 .banner h3 {
   margin: 0;
-  font-style: normal;
   font-weight: 700;
   font-size: 35px;
   line-height: 41px;
@@ -456,10 +454,8 @@ a:active {
 }
 
 .banner-text {
-  margin: 15px 0 0;
-  padding: 0;
+  margin: 16px 0px 0 1px;
 
-  font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 22px;
@@ -467,12 +463,14 @@ a:active {
   color: #ffffff;
 }
 
-#first-banner.banner {
+#first-banner {
   background: url("../IMG/Raspberry_background.png") no-repeat;
   background-size: 100% 100%;
 }
 
-#second-banner.banner {
+#second-banner {
+  margin-top: -1px;
+
   background: url("../IMG/Chocolate_background.png") no-repeat;
   background-size: 100% 100%;
 }
@@ -481,12 +479,13 @@ a:active {
   display: flex;
   justify-content: flex-end;
   padding: 0;
-  margin: 44px 0 0 0;
+  margin: 45px 0 0;
 }
 
-.banner button {
+.banner__button {
   margin: 0;
-  padding: 10px 23px 11px 21px;
+  height: 46px;
+  /* padding: 9px 23px 11px 21px; */
 
   font-weight: 700;
   font-size: 18px;
@@ -497,6 +496,22 @@ a:active {
   background: linear-gradient(0deg, #ca3824 -2.17%, #f26843 104.35%);
   opacity: 0.99;
   box-shadow: 0px 2px 2px rgba(85, 8, 0, 0.54);
+}
+
+#first-banner .banner__button {
+  padding: 0 23px 5px 22px;
+}
+
+#second-banner .banner__button {
+  /* padding: 11px 21px 11px 21px; */
+  padding: 0 21px 5px 21px;
+  /* margin-bottom: 1px; */
+}
+
+#second-banner .banner-text {
+  /* margin: 16px 0 0; */
+  margin-top: 15px;
+  margin-bottom: 1px;
 }
 
 .banner__button:focus,
