--- a/CSS/style.css
+++ b/CSS/style.css
@@ -77,8 +77,8 @@ body {
   transition: background-image 0.5s ease, background-color 0.3s ease;
 }
 
-/* Пляшут элементы при наведении на input, зафиксировать размер */
-input {
+input,
+textarea {
   background: #ffffff;
   border: 1px solid rgba(178, 178, 178, 0.52);
   line-height: 24px;
@@ -87,16 +87,20 @@ input {
   border-radius: 5px;
 }
 
-input::placeholder {
+input::placeholder,
+textarea::placeholder {
   color: #999999;
 }
 
 input:hover,
-input:focus {
+input:focus,
+textarea:hover,
+textarea:focus {
   border: 2px solid rgba(154, 154, 154, 0.52);
 }
 
-input:active {
+input:active,
+textarea:active {
   border: 2px solid rgba(46, 136, 228, 0.52);
 }
 
@@ -218,6 +222,10 @@ a:active {
   text-underline-offset: 3px;
   text-decoration-color: rgba(255, 255, 255, 0.2);
   border-radius: 40px;
+}
+
+.catalog-button-container {
+  position: relative;
 }
 
 .user-navigation {
@@ -1018,20 +1026,22 @@ a:active {
 /* У всех модальных окон при смене размера экрана съезжает позиционирование!!! */
 .modal {
   position: fixed;
-
   border-radius: 5px;
   background: #f8f7f4;
   box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
   color: #323232;
+
+  border-radius: 5px;
 }
 
 /* Меню каталога */
 .modal-catalog-menu {
+  position: absolute;
   padding: 11px 9px 8px 6px;
-  top: 60px;
-  left: 27%;
-  margin-left: 22px;
-  border-radius: 5px;
+  margin-top: 6px;
+  margin-left: -6px;
+
+  /* border-radius: 5px; */
 
   display: none;
 }
@@ -1119,7 +1129,7 @@ a:active {
   line-height: 24px;
 }
 
-/* Всплывающее окно входа */
+/* Окно входа */
 .modal-login {
   position: absolute;
   width: 277px;
@@ -1147,7 +1157,6 @@ a:active {
 .login-input,
 .password-input {
   box-sizing: border-box;
-  /* padding: 9px 14px 13px 14px; */
   padding: 0 13px 0 13px;
   width: 241px;
   height: 44px;
@@ -1159,7 +1168,6 @@ a:active {
 
 .sign-in-container {
   display: flex;
-  /* margin-left: 1px; */
   gap: 16px;
 
   text-underline-offset: 2px;
@@ -1208,14 +1216,66 @@ a:active {
   color: #e84d37;
 }
 
+/* +затемнение */
 /* Форма обратной связи */
 .modal-feedback {
-  top: 250px;
-  right: 25%;
+  position: relative;
+  width: 477px;
+  height: 442px;
+  bottom: 235vh;
+  /* top: 250px;*/
+  left: 30%;
   /* margin-right: 5px; */
 
-  border-radius: 5px;
-  display: none;
+  /* display: none; */
+}
+
+.feedback-form {
+  display: flex;
+  flex-direction: column;
+  /* padding: 16px 26px 96px 24px; */
+  padding: 16px 26px 27px 24px;
+  gap: 20px;
+}
+
+.feedback-text {
+  margin: 0;
+  margin-left: -1px;
+  margin-bottom: -1px;
+
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  align-items: center;
+}
+
+.feedback-name,
+.feedback-email {
+  box-sizing: border-box;
+  width: 267px;
+  height: 44px;
+  padding: 0 13px;
+}
+
+.feedback-textarea {
+  /* display: flex;
+  flex-wrap: wrap; */
+  width: 398px;
+  /* width: 422px; */
+  height: 137px;
+  padding: 8px 14px;
+  resize: none;
+}
+
+.feedback-send-button {
+  width: 137px;
+  height: 44px;
+  padding-bottom: 4px;
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  align-items: center;
 }
 
 /* Отобразить модальное окно */
