Created additional js files

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -126,6 +126,8 @@ button {
   background: linear-gradient(0deg, #e74a35 0%, #f26843 100%);
   box-shadow: 0px 2px 2px rgba(172, 16, 0, 0.64);
   border-radius: 40px;
+
+  cursor: pointer;
 }
 
 button:hover,
@@ -137,11 +139,16 @@ button:focus {
     ),
     linear-gradient(0deg, #e74a35 -3.14%, #f26843 103.11%);
   box-shadow: 0px 2px 2px #ac1000;
+
+  cursor: pointer;
 }
+
 button:active {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.07), rgba(0, 0, 0, 0.07)),
     linear-gradient(0deg, #f26843 0%, #e74a35 100%);
   box-shadow: inset 0px 2px 2px #942718;
+
+  cursor: pointer;
 }
 
 ul {
@@ -164,13 +171,14 @@ ul {
 a,
 a:visited {
   text-decoration: none;
-  cursor: default;
+  cursor: pointer;
   color: inherit;
 }
 
 a:hover,
 a:focus,
 a:active {
+  cursor: pointer;
   color: #ffbc9e;
 }
 
